--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://dalena.github.io/thecalling/majora/">
   <meta property="og:description" content="Sevdaliza presents Majora.">
-  <meta property="og:image" content=".\assets\og-image.png">
+  <meta property="og:image" content="/assets/og-image.png">
 
   <!-- JS Modules -->
   <script type="text/javascript" src=".\libs\console.style.min.js"></script>
@@ -72,19 +72,19 @@
             <div class="form-row">
               <input type="email" name="EMAIL" class="form-control" placeholder="Email" value="" required>
             </div>
-            </br>
+            <br>
             <div class="form-row">
               <input type="date" name="BDAY" class="form-control" placeholder="Email" value="" required>
             </div>
-            </br>
+            <br>
             <div class="form-row">
               <select id="countries" name="COUNTRY" class="form-control"> </select>
             </div>
-            </br>
+            <br>
             <div class="form-row">
               <input type="tel" name="CELL" class="form-control" placeholder="Cellphone" value="" required>
             </div>
-            </br>
+            <br>
             <div class="form-row">
               <button class="btn btn-block" type="submit">Send</button>
             </div>
