--- a/index.html
+++ b/index.html
@@ -61,43 +61,93 @@
   </div>
 
 
-  <div id="form-container" class="center opacity-zero animated anim-1">
+  <div id="form-container" class="fluid-container center opacity-zero animated anim-1">
     <div class="container vertical-center">
+      <script>
+        function isNumberKey(evt) {
+          var charCode = (evt.which) ? evt.which : event.keyCode
+          if (charCode > 31 && (charCode < 48 || charCode > 57))
+            return false;
+          return true;
+        }
+      </script>
       <div class="row auto-margin">
-        <div class="col-md-12">
-          <h5>Enter the following information, including your birthday, to hear your personalized poem.</h5>
+        <div class="col-md-12 mt-5 mb-5">
+          <h5>To hear your poem, enter the following information, including your birthday.</h5>
           <br>
           <form class="needs-validation" action="https://hiradsab.us12.list-manage.com/subscribe/post-json?u=dfd02f746239cbeb66c6c7e5f&amp;id=48edb1d81b&amp;c=?"
             method="post" novalidate>
             <div class="form-row">
-              <input type="email" name="EMAIL" class="form-control" placeholder="Email" value="" required>
+              <div class="col-md-12 mb-3">
+                <input type="email" name="EMAIL" class="form-control" placeholder="Email" value="" required>
+              </div>
             </div>
-            <br>
             <div class="form-row">
-              <input type="date" name="BDAY" class="form-control" placeholder="Email" value="" required>
+              <div class="col-md-4 mb-3">
+                <input type="number" value="" placeholder="dd" size="2" maxlength="2" name="BDAY[day]" class="form-control" onkeypress="return isNumberKey(event)"
+                  min="0" max="31" required>
+              </div>
+              <div class="col-md-4 mb-3">
+                <input type="number" pattern="[0-9]*" value="" placeholder="mm" size="2" maxlength="2" name="BDAY[month]" class="form-control"
+                  onkeypress="return isNumberKey(event)" min="01" max="12" required>
+              </div>
+              <div class="col-md-4 mb-3">
+                <input type="number" pattern="[0-9]*" value="" placeholder="yyyy" size="4" maxlength="4" name="BDAY[year]" class="form-control"
+                  onkeypress="return isNumberKey(event)" min="1990" max="2018" required>
+              </div>
             </div>
-            <br>
             <div class="form-row">
-              <select id="countries" name="COUNTRY" class="form-control"> </select>
+              <div class="col-md-12 mb-3">
+                <select id="countries" name="COUNTRY" class="form-control"> </select>
+              </div>
             </div>
-            <br>
             <div class="form-row">
-              <input type="tel" name="CELL" class="form-control" placeholder="Cellphone" value="" required>
+              <div class="col-md-12 mb-3">
+                <input type="tel" name="CELL" class="form-control" placeholder="Cellphone" value="" required>
+              </div>
             </div>
-            <br>
             <div class="form-row">
-              <button class="btn btn-block" type="submit">Send</button>
+              <div class="col-md-6 mb-3">
+                <div class="input-group">
+                  <div class="input-group-prepend">
+                    <span class="input-group-text inputGroupPrepend" id="inputGroupPrepend">@</span>
+                  </div>
+                  <input type="tel" name="FBID" class="form-control" placeholder="Facebook ID" value="">
+                </div>
+              </div>
+              <div class="col-md-6 mb-3">
+                <div class="input-group">
+                  <div class="input-group-prepend">
+                    <span class="input-group-text inputGroupPrepend" id="inputGroupPrepend">@</span>
+                  </div>
+                  <input type="tel" name="IGID" class="form-control" placeholder="Instagram ID" value="">
+                </div>
+              </div>
+            </div>
+            <div class="form-row">
+              <div class="col-md-12 mb-3">
+                <button class="btn btn-block" type="submit">Send</button>
+                <h6 class="mt-5" style="text-aling:center;font-family: sans-serif;max-width: 90%;margin: auto;background: transparent;">
+                    <sup>This information will also be used to send you personalized content, including newsletters and location-based
+                      tour dates. We respect your privacy and do not tolerate spam and will never sell, rent, lease or give away
+                      your information to any third party. Nor will we send you unsolicited email. <br>You can unsubsribe anytime.</sup>
+                  </h6>
+              </div>
             </div>
           </form>
         </div>
       </div>
     </div>
+
   </div>
 
-<div id="footer" class="opacity-zero animated anim-1 center">
+  <div id="footer" class="opacity-zero animated anim-1 center">
     <h5>Click or tap on the screen to change the scenes.</h5>
-    <button class="btn btn-primary"><a class="animated anim-fast" href="http://sevdaliza.com/">Return to Main Website</a></button>
-</div>
+    <button class="btn btn-primary">
+      <a class="animated anim-fast" href="http://sevdaliza.com/">Return to Main Website</a>
+    </button>
+  </div>
 
 </body>
+
 </html>
