--- a/index.html
+++ b/index.html
@@ -60,8 +60,7 @@
     </div>
   </div>
 
-
-  <div id="form-container" class="fluid-container center opacity-zero animated anim-fast">
+  <div id="form-container" class="fluid-container center opacity-zero animated anim-1">
     <div class="container vertical-center">
       <script>
         function isNumberKey(evt) {
@@ -157,7 +156,6 @@
       <a class="animated anim-fast" href="http://sevdaliza.com/">Return to Main Website</a>
     </button>
   </div>
-
 </body>
 
 </html>
