--- a/index.html
+++ b/index.html
@@ -69,7 +69,12 @@
             version of
             <a href="https://www.google.com/chrome/">Chrome</a>.
           </h6>
-          <button class="btn tour-button mt-5" onclick='$("#tour-1").hide(); $("#tour-2").show();'>Next</button>
+          <h6 class="mt-3">
+            <strong>
+              <em>Please turn on your audio</em>.
+            </strong>
+          </h6>
+          <button class="btn tour-button mt-3" onclick='$("#tour-1").hide(); $("#tour-2").show();'>Next</button>
         </div>
       </div>
 
@@ -96,23 +101,17 @@
           <h6>
             <strong>
               <em>Scroll</em>
-            </strong> to zoom.</h6>
+            </strong> to zoom.
+          </h6>
           <h6>
             <strong>
               <em>Click</em>
-            </strong> to lock camera to cursor.</h6>
+            </strong> to lock camera to cursor.
+          </h6>
           <h6>
             <strong>
-              <kbd>W</kbd>
-              <kbd>A</kbd>
-              <kbd>S</kbd>
-              <kbd>D</kbd>
-              <em></em>&amp;</em>
-              <kbd>←</kbd>
-              <kbd>↑</kbd>
-              <kbd>↓</kbd>
-              <kbd>→</kbd>
-            </strong>
+              <kbd>ESC</kbd>
+            </strong> to release camera from cursor.
           </h6>
         </div>
         <div class="col-md-4 mb-5">
