--- a/index.html
+++ b/index.html
@@ -22,6 +22,25 @@
   <meta property="og:description" content="Sevdaliza presents Majora.">
   <meta property="og:image" content="/assets/og-image.png">
 
+  <!-- Favicon -->
+  <link rel="apple-touch-icon" sizes="57x57" href=".\assets\favicon\apple-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="60x60" href=".\assets\favicon\apple-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href=".\assets\favicon\apple-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href=".\assets\favicon\apple-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href=".\assets\favicon\apple-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href=".\assets\favicon\apple-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href=".\assets\favicon\apple-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href=".\assets\favicon\apple-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href=".\assets\favicon\apple-icon-180x180.png">
+  <link rel="icon" type="image/png" sizes="192x192" href=".\assets\favicon\android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="32x32" href=".\assets\favicon\favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href=".\assets\favicon\favicon-96x96.png">
+  <link rel="icon" type="image/png" sizes="16x16" href=".\assets\favicon\favicon-16x16.png">
+  <link rel="manifest" href=".\assets\favicon\manifest.json">
+  <meta name="msapplication-TileColor" content="#8d93b1">
+  <meta name="msapplication-TileImage" content=".\assets\favicon\ms-icon-144x144.png">
+  <meta name="theme-color" content="#8d93b1">
+
   <!-- JS Modules -->
   <script type="text/javascript" src=".\libs\console.style.min.js"></script>
   <script type="text/javascript" src=".\libs\howler.min.js"></script>
@@ -222,7 +241,7 @@
                   <sup>This information will also be used to send you personalized content, including newsletters and location-based
                     tour dates. We respect your privacy and do not tolerate spam and will never sell, rent, lease or give
                     away your information to any third party. Nor will we send you unsolicited email.
-                    <br>You can unsubsribe anytime.</sup>
+                    <br>You can unsubscribe anytime.</sup>
                 </h6>
               </div>
             </div>
