finalization, lock release

--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
   <link rel="icon" type="image/png" sizes="96x96" href=".\assets\favicon\favicon-96x96.png">
   <link rel="icon" type="image/png" sizes="16x16" href=".\assets\favicon\favicon-16x16.png">
   <link rel="manifest" href=".\assets\favicon\manifest.json">
-  <meta name="msapplication-TileColor" content="#8d93b1">
+  <meta name="msapplication-TileColor" content="#000000">
   <meta name="msapplication-TileImage" content=".\assets\favicon\ms-icon-144x144.png">
-  <meta name="theme-color" content="#8d93b1">
+  <meta name="theme-color" content="#000000">
 
   <!-- JS Modules -->
   <script type="text/javascript" src=".\libs\console.style.min.js"></script>
@@ -100,7 +100,8 @@
       <div id="tour-2" class="row" style="display:none;">
         <div class="col-md-8 offset-md-2">
           <h4></h4>
-          <h6>You can leave your information before receiving a personal poem.</h6>
+          <h6><strong><em>Majora</em></strong> is a digital enchantress and mystic.</h6>
+          <h6>On every visit she will recite a unique poem, predictive of your current state.</h6>
           <button class="btn tour-button mt-5" onclick='$("#tour-2").hide(); $("#tour-3").show();'>Next</button>
         </div>
       </div>
@@ -108,6 +109,7 @@
       <div id="tour-3" class="row" style="display:none;">
         <div class="col-md-8 offset-md-2">
           <h4></h4>
+          <h6>You can leave your information before receiving a personal poem.</h6>
           <h6>We respect your privacy, and this information will only be used to send you related updates and news.
           </h6>
           <button class="btn tour-button mt-5" onclick='$("#tour-3").hide(); $("#tour-4").show();'>Next</button>
