--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://dalena.github.io/thecalling/majora/">
   <meta property="og:description" content="Sevdaliza presents Majora.">
-  <meta property="og:image" content="/assets/og-image.png">
+  <meta property="og:image" content="https://raw.githubusercontent.com/dalena/majora/master/assets/og-image.png">
 
   <!-- Favicon -->
   <link rel="apple-touch-icon" sizes="57x57" href=".\assets\favicon\apple-icon-57x57.png">
