og:image:width etc

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
   <meta property="og:url" content="https://dalena.github.io/thecalling/majora/">
   <meta property="og:description" content="Sevdaliza presents Majora.">
   <meta property="og:image" content="https://raw.githubusercontent.com/dalena/majora/master/assets/og-image.png">
+  <meta property="og:image:width" content="960" />
+  <meta property="og:image:height" content="960" />
 
   <!-- Favicon -->
   <link rel="apple-touch-icon" sizes="57x57" href=".\assets\favicon\apple-icon-57x57.png">
@@ -100,7 +102,10 @@
       <div id="tour-2" class="row" style="display:none;">
         <div class="col-md-8 offset-md-2">
           <h4></h4>
-          <h6><strong><em>Majora</em></strong> is a digital enchantress and mystic.</h6>
+          <h6>
+            <strong>
+              <em>Majora</em>
+            </strong> is a digital enchantress and mystic.</h6>
           <h6>On every visit she will recite a unique poem, predictive of your current state.</h6>
           <button class="btn tour-button mt-5" onclick='$("#tour-2").hide(); $("#tour-3").show();'>Next</button>
         </div>
