--- a/index.html
+++ b/index.html
@@ -2,6 +2,47 @@
 <html>
 
 <head>
+<!--
+      ___         ___
+     /\__\       /\  \
+    /:/ _/_     /::\  \
+   /:/ /\  \   /:/\:\  \
+  /:/ /::\  \ /:/  \:\  \
+ /:/_/:/\:\__/:/__/ \:\__\
+ \:\/:/ /:/  \:\  \ /:/  /
+  \::/ /:/  / \:\  /:/  /
+   \/_/:/  /   \:\/:/  /
+     /:/  /     \::/  /
+     \___/       \___/
+     /\__\       /\  \
+    /:/ _/_     /::\  \
+   /:/ /\  \   /:/\:\  \
+  /:/ /::\  \ /:/  \:\  \
+ /:/_/:/\:\__/:/__/ \:\__\
+ \:\/:/ /:/  \:\  \ /:/  /
+  \::/ /:/  / \:\  /:/  /
+   \/_/:/  /   \:\/:/  /
+     /:/  /     \::/  /
+     \___/       \___/
+     /\  \       /\__\
+    /::\  \     /::|  |
+   /:/\:\  \   /:/:|  |
+  /:/  \:\  \ /:/|:|  |__
+ /:/__/ \:\__/:/ |:| /\__\
+ \:\  \ /:/  \/__|:|/:/  /
+  \:\  /:/  /    |:/:/  /
+   \:\/:/  /     |::/  /
+    \::/  /      |:/  /
+     \/__/       |/__/
+
+by
+hirad sab
+http://hiradsab.com
+&
+dalena tran
+http://dalena.me
+-->
+
 
   <!-- Meta -->
   <title>Majora</title>
