--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@ http://dalena.me
 
 <!DOCTYPE html>
 <html>
+
 <head>
   <!-- Meta -->
   <title>Majora</title>
@@ -145,7 +146,8 @@ http://dalena.me
             <strong>
               <em>Majora</em>
             </strong> is a digital enchantress and mystic.</h6>
-          <h6>On every visit she will recite a unique poem, predictive of your current state.</h6>
+          <h6>On every visit she will recite a unique poem, predicting your currents.</h6>
+          <h6>To receive your personal poem, please enter your information.</h6>
           <button class="btn tour-button mt-5" onclick='$("#tour-2").hide(); $("#tour-3").show();'>Next</button>
         </div>
       </div>
@@ -154,8 +156,7 @@ http://dalena.me
         <div class="col-md-8 offset-md-2">
           <h4></h4>
           <h6>You can leave your information before receiving a personal poem.</h6>
-          <h6>We respect your privacy, and this information will only be used to send you related updates and news.
-          </h6>
+          <h6>We respect your privacy, and this information will only be used to send you Sevdaliza related updates and news.</h6>
           <button class="btn tour-button mt-5" onclick='$("#tour-3").hide(); $("#tour-4").show();'>Next</button>
         </div>
       </div>
@@ -303,10 +304,22 @@ http://dalena.me
         <em>Click or tap</em>
       </strong> on the screen to change the scenes.
     </h6>
+    <h6>
+      <strong>
+        <em>Esc</em>
+      </strong> to disable mouse lock.
+    </h6>
     <button class="btn tour-button">
       <a class="animated anim-fast" href="http://sevdaliza.com/">
         <small>
           Return to Main Website
+        </small>
+      </a>
+    </button>
+    <button class="btn tour-button">
+      <a class="animated anim-fast" href="#">
+        <small>
+          Stream The Calling on Spotify
         </small>
       </a>
     </button>
