swap ench & mystic

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@ http://dalena.me
           <h6>
             <strong>
               <em>Majora</em>
-            </strong> is a digital enchantress and mystic.</h6>
+            </strong> is a digital mystic and enchantress.</h6>
           <h6>On every visit she will recite a unique poem, predicting your currents.</h6>
           <h6>To receive your personal poem, please enter your information.</h6>
           <button class="btn tour-button mt-5" onclick='$("#tour-2").hide(); $("#tour-3").show();'>Next</button>
