--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ http://dalena.me
 
   <meta property="og:title" content="MAJORA">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://dalena.github.io/thecalling/majora/">
+  <meta property="og:url" content="http://majora.sevdaliza.com">
   <meta property="og:description" content="Sevdaliza presents Majora.">
   <meta property="og:image" content="https://raw.githubusercontent.com/dalena/majora/master/assets/og-image-2.png">
   <meta property="og:image:width" content="960" />
@@ -316,7 +316,7 @@ http://dalena.me
       </a>
     </button>
     <button class="btn tour-button">
-      <a class="animated anim-fast" href="#">
+      <a class="animated anim-fast" target="_blank" href="https://spoti.fi/2GXYVDO">
         <small>
           Stream The Calling on Spotify
         </small>
