--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ http://dalena.me
   <meta property="og:type" content="website">
   <meta property="og:url" content="http://majora.sevdaliza.com">
   <meta property="og:description" content="Sevdaliza presents Majora.">
-  <meta property="og:image" content="https://raw.githubusercontent.com/dalena/majora/master/assets/og-image-2.png">
+  <meta property="og:image" content="http://majora.sevdaliza.com/assets/og-image-2.png">
   <meta property="og:image:width" content="960" />
   <meta property="og:image:height" content="960" />
 
@@ -247,7 +247,7 @@ http://dalena.me
               </div>
               <div class="col-md-4 mb-3">
                 <input type="number" pattern="[0-9]*" value="" placeholder="yyyy" size="4" maxlength="4" name="BDAY[year]" class="form-control"
-                  onkeypress="return isNumberKey(event)" onfocus="clearInput(event)" min="1990" max="2018" required>
+                  onkeypress="return isNumberKey(event)" onfocus="clearInput(event)" min="1900" max="2018" required>
               </div>
             </div>
 
