--- a/index.html
+++ b/index.html
@@ -93,6 +93,10 @@ http://dalena.me
 </head>
 
 <body>
+  <button id="vjbutton" class="btn vj-button opacity-zero" onclick="majora.trackhead();" style="
+    z-index: 9999999999;
+    position: absolute;
+    overflow: hidden;">Begin VJ Track</button>
   <div id="main_canvas_container"></div>
   <div class="container vertical-center">
     <div class="row auto-margin">
